tests/baselines/reference/logicalAssignment6(target=es2021).errors.txt
tests/cases/conformance/es2021/logicalAssignment/logicalAssignment6.ts(10,5): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es2021/logicalAssignment/logicalAssignment6.ts(10,42): error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.


==== tests/cases/conformance/es2021/logicalAssignment/logicalAssignment6.ts (2 errors) ====
    function foo1(results: number[] | undefined, results1: number[] | undefined) {
        (results ||= (results1 ||= [])).push(100);
    }
    
    function foo2(results: number[] | undefined, results1: number[] | undefined) {
        (results ??= (results1 ??= [])).push(100);
    }
    
    function foo3(results: number[] | undefined, results1: number[] | undefined) {
        (results &&= (results1 &&= [])).push(100);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                                             ~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
    }
    